Fix z-index for modal

--- a/2025/index.css
+++ b/2025/index.css
@@ -1731,7 +1731,7 @@ a.session .name {
   background-color: rgba(0, 0, 0, 0.6);
   height: 100%;
   width: 100%;
-  z-index: 3;
+  z-index: 20;
   place-content: center;
   display: none;
 }
